overflow fixed, sh db

--- a/T1/public/game.css
+++ b/T1/public/game.css
@@ -1,3 +1,7 @@
+p {
+    width: auto;
+}
+
 #joc {
     display: none;
 }
